<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_panel_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_drawer_panel"
    android:clipChildren="true"
    android:clipToPadding="true"
    tools:ignore="PxUsage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/DrawerText.Title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawer_header_height"
            android:layout_marginTop="@dimen/drawer_top_spacing"
            android:gravity="center"
            android:text="@string/drawer_apps_title" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/app_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingLeft="@dimen/drawer_grid_horizontal_padding"
                android:paddingTop="@dimen/drawer_grid_vertical_padding"
                android:paddingRight="@dimen/drawer_grid_horizontal_padding"
                android:paddingBottom="@dimen/drawer_grid_vertical_padding" />

            <TextView
                android:id="@+id/app_grid_empty"
                style="@style/IcarText.Caption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/drawer_grid_horizontal_padding"
                android:paddingRight="@dimen/drawer_grid_horizontal_padding"
                android:text="@string/empty_app_catalog"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/app_grid_loading"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <ViewAnimator
            android:id="@+id/drawer_action_switcher"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drawer_action_area_height"
            android:animateFirstView="false"
            android:paddingLeft="@dimen/drawer_action_horizontal_margin"
            android:paddingRight="@dimen/drawer_action_horizontal_margin"
            android:paddingBottom="@dimen/drawer_action_bottom_margin">

            <LinearLayout
                android:id="@+id/install_apk_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/drawer_action_height"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_drawer_install"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/drawer_action_icon_size"
                    android:layout_height="@dimen/drawer_action_icon_size"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_install_apk" />

                <TextView
                    style="@style/IcarText.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/drawer_action_icon_spacing"
                    android:text="@string/install_apk" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/uninstall_target"
                android:layout_width="match_parent"
                android:layout_height="@dimen/drawer_action_height"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_drawer_uninstall"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/drawer_action_icon_size"
                    android:layout_height="@dimen/drawer_action_icon_size"
                    android:contentDescription="@null"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_uninstall" />

                <TextView
                    style="@style/IcarText.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/drawer_action_icon_spacing"
                    android:duplicateParentState="true"
                    android:text="@string/uninstall_target"
                    android:textColor="@color/drawer_uninstall_content" />
            </LinearLayout>
        </ViewAnimator>
    </LinearLayout>

</FrameLayout>
